--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ Temporary Items
 /NauertOthelloProject/nbproject/private/
 /NauertOthelloProject/build/
 /NauertOthelloProject/dist/
+/NauertOthelloProjectV2/nbproject/private/
+/NauertOthelloProjectV2/build/
