--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Temporary Items
 /NauertOthelloProject/dist/
 /NauertOthelloProjectV2/nbproject/private/
 /NauertOthelloProjectV2/build/
+/NauertOthelloProjectV2/dist/
